--- a/Code/DataDownload.ipynb
+++ b/Code/DataDownload.ipynb
@@ -510,7 +510,7 @@
     "    if path.stat().st_size > 100:\n",
     "        print(f\"  Lendo: {path.name}\")\n",
     "        try:\n",
-    "            temp = pd.read_csv(path, encoding='utf-8', sep=',', decimal='.')\n",
+    "            temp = pd.read_csv(path, encoding='utf-8', sep=',', decimal='.', dtype={'CodInst': str, 'CnpjInstituicaoLider': str})\n",
     "            df_list.append(temp)\n",
     "        except Exception as e:\n",
     "            print(f\"    -> Erro ao ler o arquivo {path.name}: {e}\")\n",
