--- a/Analysis/DataAnalysis.ipynb
+++ b/Analysis/DataAnalysis.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cbc7f098",
+   "id": "dbe5d84b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0007afe1",
+   "id": "6514a91a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47eaa35e",
+   "id": "37e50951",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "776666a4",
+   "id": "858cef91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa84fc13",
+   "id": "0abc9369",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
     "}\n",
     "\n",
     "# Lista de bancos para a comparação\n",
-    "bancos_para_comparar = ['ITAÚ', 'BRADESCO', 'NUBANK', 'BTG PACTUAL']\n",
+    "bancos_para_comparar = ['ITAU', 'BRADESCO', 'NUBANK', 'BTG PACTUAL']\n",
     "\n",
     "# Gerar a tabela\n",
     "tabela_comparativa = analisador.comparar_indicadores(\n",
