--- a/Code/DataDownload.ipynb
+++ b/Code/DataDownload.ipynb
@@ -19,9 +19,6 @@
     "import warnings\n",
     "import re\n",
     "from pathlib import Path\n",
-    "import openpyxl\n",
-    "\n",
-    "# Assumindo que DataUtils.py está no mesmo diretório ou no sys.path\n",
     "import DataUtils as du\n",
     "\n",
     "warnings.filterwarnings('ignore')\n",
@@ -104,7 +101,6 @@
     "print(\"\\n>>> INICIANDO PIPELINE: COSIF INDIVIDUAL <<<\")\n",
     "\n",
     "# --- 1. Download e Extração dos Arquivos ---\n",
-    "# (Nenhuma mudança nesta seção, a lógica de download está mantida)\n",
     "cosif_ind_dir = dir_inputs / 'COSIF' / 'individual'\n",
     "cosif_ind_dir.mkdir(parents=True, exist_ok=True)\n",
     "all_individual_csv_paths = []\n",
@@ -150,7 +146,6 @@
     "        print(f\"  -> Erro inesperado: {e}\")\n",
     "\n",
     "# --- 2. Leitura e Consolidação dos CSVs ---\n",
-    "# (Nenhuma mudança nesta seção, a lógica de leitura está mantida)\n",
     "df_list = []\n",
     "print(f\"\\nLendo {len(all_individual_csv_paths)} arquivo(s) CSV do COSIF Individual...\")\n",
     "for csv_path in sorted(list(set(all_individual_csv_paths))):\n",
@@ -238,7 +233,6 @@
     "print(\"\\n>>> INICIANDO PIPELINE: COSIF PRUDENCIAL <<<\")\n",
     "\n",
     "# --- 1. Download e Extração dos Arquivos ---\n",
-    "# (Nenhuma mudança nesta seção)\n",
     "cosif_prud_dir = dir_inputs / 'COSIF' / 'prudencial'\n",
     "cosif_prud_dir.mkdir(parents=True, exist_ok=True)\n",
     "all_prudencial_csv_paths = []\n",
@@ -284,7 +278,6 @@
     "        print(f\"  -> Erro inesperado: {e}\")\n",
     "\n",
     "# --- 2. Leitura e Consolidação dos CSVs ---\n",
-    "# (Nenhuma mudança nesta seção)\n",
     "df_list = []\n",
     "print(f\"\\nLendo {len(all_prudencial_csv_paths)} arquivo(s) CSV do COSIF Prudencial...\")\n",
     "for csv_path in sorted(list(set(all_prudencial_csv_paths))):\n",
@@ -311,7 +304,7 @@
     "    # Padronização de data\n",
     "    df_cosif_prudencial['DATA'] = pd.to_datetime(df_cosif_prudencial['DATA'], format='%Y%m').dt.strftime('%Y%m').astype(int)\n",
     "\n",
-    "    # Mapa de renomeação para o novo padrão (idêntico ao individual para consistência)\n",
+    "    # Mapa de renomeação para o novo padrão\n",
     "    rename_map = {\n",
     "        'NOME_INSTITUICAO': 'NOME_INSTITUICAO_COSIF',\n",
     "        'CONTA': 'CONTA_COSIF',\n",
@@ -371,10 +364,9 @@
     "print(\"\\n>>> INICIANDO PIPELINE: IFDATA VALORES <<<\")\n",
     "\n",
     "# --- 1. Download dos Arquivos ---\n",
-    "# (Nenhuma mudança nesta seção)\n",
     "ifdata_dir = dir_inputs / 'IFDATA'\n",
     "ifdata_dir.mkdir(parents=True, exist_ok=True)\n",
-    "tipos_instituicao = [1, 2, 3] # 1: Cong. Prudencial; 2: Inst. Indiv.; 3: Cong. Financeiro\n",
+    "tipos_instituicao = [1, 2, 3]\n",
     "\n",
     "for date_q in date_range_quarterly:\n",
     "    for tipo in tipos_instituicao:\n",
@@ -395,7 +387,6 @@
     "            print(f\"  -> Erro no download: {e}\")\n",
     "\n",
     "# --- 2. Leitura e Consolidação dos CSVs ---\n",
-    "# (Nenhuma mudança nesta seção)\n",
     "csv_files = sorted(ifdata_dir.glob(\"IfDataValores_*.csv\"))\n",
     "df_list = []\n",
     "print(f\"\\nLendo {len(csv_files)} arquivo(s) CSV do IFDATA Valores...\")\n",
@@ -482,7 +473,6 @@
     "print(\"\\n>>> INICIANDO PIPELINE: IFDATA CADASTRO <<<\")\n",
     "\n",
     "# --- 1. Download dos Arquivos ---\n",
-    "# (Nenhuma mudança nesta seção)\n",
     "ifdata_dir = dir_inputs / 'IFDATA' \n",
     "for date_m in date_range_monthly:\n",
     "    output_csv_cad = ifdata_dir / f\"IfDataCadastro_{date_m}.csv\"\n",
@@ -502,7 +492,6 @@
     "        print(f\"  -> Erro no download: {e}\")\n",
     "\n",
     "# --- 2. Leitura e Consolidação dos CSVs ---\n",
-    "# (Nenhuma mudança nesta seção)\n",
     "csv_files = sorted(ifdata_dir.glob(\"IfDataCadastro_*.csv\"))\n",
     "df_list = []\n",
     "print(f\"\\nLendo {len(csv_files)} arquivo(s) CSV do IFDATA Cadastro...\")\n",
@@ -690,13 +679,98 @@
     "    else:\n",
     "        print(\" -> AVISO: df_ifdata_valores vazio ou colunas de conta não encontradas.\")\n",
     "except NameError:\n",
-    "    print(\" -> AVISO: DataFrame 'df_ifdata_valores' não existe. Dicionário não gerado.\")"
+    "    print(\" -> AVISO: DataFrame 'df_ifdata_valores' não existe. Dicionário não gerado.\")\n",
+    "\n",
+    "# --- 4. Gerar Dicionário de Entidades (Nomes, CNPJs e Códigos) ---\n",
+    "print(\"\\n--- Gerando Dicionário de Entidades para Consulta ---\")\n",
+    "\n",
+    "try:\n",
+    "    # Passo 1: Criar a base de dados de entidades a partir do IFDATA Cadastro, incluindo todos os identificadores\n",
+    "    # Selecionamos a entrada mais recente para cada CNPJ_8 para obter os códigos mais atuais.\n",
+    "    df_base_entidades = (\n",
+    "        df_ifdata_cadastro[[\n",
+    "            'DATA', 'CNPJ_8', 'NOME_INSTITUICAO_IFD_CAD', \n",
+    "            'COD_CONGL_PRUD_IFD_CAD', 'COD_CONGL_FIN_IFD_CAD', 'CNPJ_LIDER_8_IFD_CAD'\n",
+    "        ]]\n",
+    "        .sort_values('DATA', ascending=False)\n",
+    "        .drop_duplicates(subset=['CNPJ_8'], keep='first')\n",
+    "        .drop(columns='DATA')\n",
+    "        .rename(columns={\n",
+    "            'NOME_INSTITUICAO_IFD_CAD': 'NOME_PRINCIPAL',\n",
+    "            'COD_CONGL_PRUD_IFD_CAD': 'COD_CONGL_PRUD',\n",
+    "            'COD_CONGL_FIN_IFD_CAD': 'COD_CONGL_FIN',\n",
+    "            'CNPJ_LIDER_8_IFD_CAD': 'CNPJ_LIDER'\n",
+    "        })\n",
+    "    ).dropna(subset=['CNPJ_8'])\n",
+    "\n",
+    "    # Passo 2: Coletar todos os nomes únicos e seus CNPJs de todas as fontes\n",
+    "    nomes_cosif_prud = df_cosif_prudencial[['CNPJ_8', 'NOME_INSTITUICAO_COSIF']].rename(columns={'NOME_INSTITUICAO_COSIF': 'NOME_VARIACOES'})\n",
+    "    nomes_cosif_ind = df_cosif_individual[['CNPJ_8', 'NOME_INSTITUICAO_COSIF']].rename(columns={'NOME_INSTITUICAO_COSIF': 'NOME_VARIACOES'})\n",
+    "    nomes_ifd_cad = df_ifdata_cadastro[['CNPJ_8', 'NOME_INSTITUICAO_IFD_CAD']].rename(columns={'NOME_INSTITUICAO_IFD_CAD': 'NOME_VARIACOES'})\n",
+    "    \n",
+    "    df_todos_nomes = (\n",
+    "        pd.concat([nomes_cosif_prud, nomes_cosif_ind, nomes_ifd_cad])\n",
+    "        .dropna()\n",
+    "        .drop_duplicates()\n",
+    "        .groupby('CNPJ_8')['NOME_VARIACOES']\n",
+    "        .apply(lambda x: ' | '.join(sorted(list(set(x)))))\n",
+    "        .reset_index()\n",
+    "    )\n",
+    "\n",
+    "    # Passo 3: Fazer o merge da base de entidades com a lista de todos os nomes\n",
+    "    df_entidades_final = pd.merge(\n",
+    "        df_base_entidades,\n",
+    "        df_todos_nomes,\n",
+    "        on='CNPJ_8',\n",
+    "        how='outer'\n",
+    "    )\n",
+    "    \n",
+    "    # Preencher o nome principal caso ele esteja faltando (para entidades que só existem no COSIF)\n",
+    "    df_entidades_final['NOME_PRINCIPAL'] = df_entidades_final['NOME_PRINCIPAL'].fillna(\n",
+    "        df_entidades_final['NOME_VARIACOES'].str.split(' | ').str[0]\n",
+    "    )\n",
+    "    \n",
+    "    # Reordenar as colunas para uma apresentação lógica\n",
+    "    cols_ordem = [\n",
+    "        'NOME_PRINCIPAL', \n",
+    "        'CNPJ_8', \n",
+    "        'CNPJ_LIDER', \n",
+    "        'COD_CONGL_PRUD', \n",
+    "        'COD_CONGL_FIN', \n",
+    "        'NOME_VARIACOES'\n",
+    "    ]\n",
+    "    df_entidades_final = df_entidades_final[cols_ordem]\n",
+    "    df_entidades_final = df_entidades_final.sort_values('NOME_PRINCIPAL').reset_index(drop=True)\n",
+    "\n",
+    "    # Salvar em Excel\n",
+    "    output_path_entidades = dir_outputs / 'dicionario_entidades.xlsx'\n",
+    "    df_entidades_final.to_excel(output_path_entidades, index=False)\n",
+    "    \n",
+    "    print(f\"-> {len(df_entidades_final)} entidades únicas salvas com sucesso em: {output_path_entidades}\")\n",
+    "    print(\"O dicionário agora contém todos os identificadores chave (Líder, Prudencial, Financeiro).\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"ERRO ao gerar o dicionário de entidades: {e}\")"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
