--- a/Code/DataDownload.ipynb
+++ b/Code/DataDownload.ipynb
@@ -20,6 +20,7 @@
     "import re\n",
     "from pathlib import Path\n",
     "import DataUtils as du\n",
+    "import time\n",
     "\n",
     "warnings.filterwarnings('ignore')\n",
     "pd.set_option('display.max_columns', 100)\n",
@@ -361,12 +362,15 @@
     "# Descrição: Baixa e consolida os dados trimestrais de \"Valores\" da API IFDATA.\n",
     "# O resultado final é um único DataFrame salvo em formato Parquet com nomes padronizados.\n",
     "# ==============================================================================\n",
-    "print(\"\\n>>> INICIANDO PIPELINE: IFDATA VALORES <<<\")\n",
+    "print(\"\\n>>> INICIANDO PIPELINE: IFDATA VALORES (PODE DEMORAR) <<<\")\n",
     "\n",
     "# --- 1. Download dos Arquivos ---\n",
     "ifdata_dir = dir_inputs / 'IFDATA'\n",
     "ifdata_dir.mkdir(parents=True, exist_ok=True)\n",
     "tipos_instituicao = [1, 2, 3]\n",
+    "\n",
+    "MAX_TENTATIVAS = 3\n",
+    "DELAY_SEGUNDOS = 5\n",
     "\n",
     "for date_q in date_range_quarterly:\n",
     "    for tipo in tipos_instituicao:\n",
@@ -374,17 +378,33 @@
     "        if output_csv_val.exists():\n",
     "            print(f\"IFDATA Valores ({date_q} | Tipo {tipo}): CSV já existe, pulando download.\")\n",
     "            continue\n",
-    "            \n",
-    "        url_val = f\"https://olinda.bcb.gov.br/olinda/servico/IFDATA/versao/v1/odata/IfDataValores(AnoMes=@AnoMes,TipoInstituicao=@TipoInstituicao,Relatorio=@Relatorio)?@AnoMes={date_q}&@TipoInstituicao={tipo}&@Relatorio='T'&$format=text/csv\"\n",
-    "        print(f\"IFDATA Valores ({date_q} | Tipo {tipo}): Baixando...\")\n",
-    "        try:\n",
-    "            resp = requests.get(url_val, timeout=120)\n",
-    "            resp.raise_for_status()\n",
-    "            with open(output_csv_val, 'wb') as f:\n",
-    "                f.write(resp.content)\n",
-    "            print(\"  -> Sucesso!\")\n",
-    "        except requests.exceptions.RequestException as e:\n",
-    "            print(f\"  -> Erro no download: {e}\")\n",
+    "\n",
+    "        url_val = (\n",
+    "            f\"https://olinda.bcb.gov.br/olinda/servico/IFDATA/versao/v1/odata/\"\n",
+    "            f\"IfDataValores(AnoMes=@AnoMes,TipoInstituicao=@TipoInstituicao,\"\n",
+    "            f\"Relatorio=@Relatorio)?@AnoMes={date_q}&@TipoInstituicao={tipo}\"\n",
+    "            f\"&@Relatorio='T'&$format=text/csv\"\n",
+    "        )\n",
+    "        print(f\"IFDATA Valores ({date_q} | Tipo {tipo}): Baixando…\")\n",
+    "\n",
+    "        sucesso = False\n",
+    "        for tentativa in range(1, MAX_TENTATIVAS + 1):\n",
+    "            try:\n",
+    "                resp = requests.get(url_val, timeout=120)\n",
+    "                resp.raise_for_status()\n",
+    "                with open(output_csv_val, 'wb') as f:\n",
+    "                    f.write(resp.content)\n",
+    "                print(f\"  -> Sucesso na tentativa {tentativa}!\")\n",
+    "                sucesso = True\n",
+    "                break\n",
+    "            except requests.exceptions.RequestException as e:\n",
+    "                print(f\"  -> Tentativa {tentativa} falhou: {e}\")\n",
+    "                if tentativa < MAX_TENTATIVAS:\n",
+    "                    print(f\"     esperando {DELAY_SEGUNDOS}s antes da próxima tentativa…\")\n",
+    "                    time.sleep(DELAY_SEGUNDOS)\n",
+    "\n",
+    "        if not sucesso:\n",
+    "            print(f\"  => Todas as {MAX_TENTATIVAS} tentativas falharam para ({date_q} | Tipo {tipo}). Pulando.\")\n",
     "\n",
     "# --- 2. Leitura e Consolidação dos CSVs ---\n",
     "csv_files = sorted(ifdata_dir.glob(\"IfDataValores_*.csv\"))\n",
