--- a/Analysis/DataAnalysis_example_2.ipynb
+++ b/Analysis/DataAnalysis_example_2.ipynb
@@ -7,17 +7,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ==============================================================================\n",
-    "# CÉLULA ÚNICA FINAL PARA DataAnalysis2.ipynb\n",
-    "# ==============================================================================\n",
+    "# --- 1. IMPORTS, SETUPS E INICIALIZAÇÃO ---\n",
     "\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "import sys\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "\n",
-    "# --- 1. SETUP E INICIALIZAÇÃO ---\n",
     "print(\"--- 1. INICIANDO SETUP ---\")\n",
+    "\n",
+    "# Adiciona o diretório 'Code' ao path para encontrar o DataUtils\n",
     "code_dir = Path('..').resolve() / 'Code'\n",
     "if str(code_dir) not in sys.path:\n",
     "    sys.path.append(str(code_dir))\n",
@@ -41,8 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- 3. TESTE DE CONSULTA BÁSICA (COSIF) ---\n",
-    "print(\"\\n--- 3. TESTANDO CONSULTA BÁSICA COSIF ---\")\n",
+    "# --- 2. TESTE DE CONSULTA BÁSICA (COSIF) ---\n",
+    "print(\"\\n--- 2. TESTANDO CONSULTA BÁSICA COSIF ---\")\n",
     "# Use um nome exato da lista acima para garantir o sucesso\n",
     "dados_bb_cosif = analisador.get_dados_cosif(\n",
     "    identificador='BCO DO BRASIL S.A.',\n",
@@ -54,8 +54,8 @@
     "print(\"-\" * 50)\n",
     "\n",
     "\n",
-    "# --- 4. TESTE DA TABELA COMPARATIVA COMPLETA ---\n",
-    "print(\"\\n--- 4. TESTANDO TABELA COMPARATIVA COMPLETA ---\")\n",
+    "# --- 3. TESTE DA TABELA COMPARATIVA COMPLETA ---\n",
+    "print(\"\\n--- 3. TESTANDO TABELA COMPARATIVA COMPLETA ---\")\n",
     "indicadores_completos = {\n",
     "    'Patrimônio Líquido': {'tipo': 'COSIF', 'conta': 'PATRIMÔNIO LÍQUIDO'},\n",
     "    'Total Ativos': {'tipo': 'COSIF', 'conta': 'TOTAL GERAL DO ATIVO'},\n",
@@ -63,7 +63,6 @@
     "    'Situação': {'tipo': 'Atributo', 'atributo': 'SITUACAO_IFD_CAD'}\n",
     "}\n",
     "\n",
-    "# Usando nomes curtos, mas agora sabendo que a busca flexível funciona\n",
     "bancos_para_comparar = ['61190658', 'BANCO BRADESCO', 'NU FINANCEIRA', 'BANCO BTG PACTUAL', 'BCO DO BRASIL S.A.']\n",
     "\n",
     "print(\"\\nComparativo usando Documento 4060 (Balancete):\")\n",
@@ -77,8 +76,8 @@
     "print(\"-\" * 50)\n",
     "\n",
     "\n",
-    "# --- 5. TESTE DA SÉRIE TEMPORAL ---\n",
-    "print(\"\\n--- 5. TESTANDO SÉRIE TEMPORAL ---\")\n",
+    "# --- 4. TESTE DA SÉRIE TEMPORAL ---\n",
+    "print(\"\\n--- 4. TESTANDO SÉRIE TEMPORAL ---\")\n",
     "serie_nubank = analisador.get_serie_temporal_indicador(\n",
     "    identificador='NU FINANCEIRA', # Usando nome curto\n",
     "    conta='TOTAL GERAL DO ATIVO',\n",
@@ -112,17 +111,18 @@
    "outputs": [],
    "source": [
     "# ==============================================================================\n",
-    "# CÉLULA: Gerar Tabela Comparativa a Partir de um Arquivo CSV (VERSÃO CORRIGIDA)\n",
+    "# Gerar Tabela Comparativa a Partir de um Arquivo CSV (DEMORADO)\n",
     "# ==============================================================================\n",
+    "\n",
+    "# Garante que a pasta Results existe\n",
+    "results_dir = Path('.') / 'Results'\n",
+    "results_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# Passo 1: Carregar a lista de CNPJs do seu arquivo CSV\n",
     "print(\"--- Lendo a lista de bancos do arquivo Banks.csv ---\")\n",
     "try:\n",
     "    caminho_csv = Path('.') / 'Banks.csv'\n",
     "    \n",
-    "    # ==========================================================================\n",
-    "    # CORREÇÃO CRÍTICA: Ler a coluna CNPJ como string para preservar os zeros.\n",
-    "    # ==========================================================================\n",
     "    df_bancos_interesse = pd.read_csv(caminho_csv, dtype={'CNPJ': str}, sep=';')\n",
     "    \n",
     "    # Agora que a coluna já é string, podemos simplesmente convertê-la para uma lista.\n",
@@ -143,7 +143,7 @@
     "\n",
     "# Só continua se a lista de bancos não estiver vazia\n",
     "if lista_de_bancos_do_csv:\n",
-    "    # Passo 2: Definir os indicadores (mesma lógica de antes)\n",
+    "    # Passo 2: Definir os indicadores\n",
     "    indicadores_desejados = {\n",
     "        'Índice de Basileia': {'tipo': 'IFDATA', 'conta': 'Índice de Basileia'},\n",
     "        'TCB': {'tipo': 'Atributo', 'atributo': 'TCB_IFD_CAD'},\n",
@@ -173,11 +173,185 @@
     "    display(tabela_final)\n",
     "\n",
     "    try:\n",
-    "        caminho_output_tabela = Path('.') / 'Results' / f'relatorio_bancos_{data_analise}.xlsx'\n",
+    "        # Salvar o relatório dentro de Results\n",
+    "        caminho_output_tabela = results_dir / f'relatorio_bancos_{data_analise}.xlsx'\n",
     "        tabela_final.to_excel(caminho_output_tabela)\n",
     "        print(f\"\\nRelatório salvo com sucesso em: '{caminho_output_tabela.resolve()}'\")\n",
     "    except Exception as e:\n",
     "        print(f\"\\nErro ao salvar o relatório em Excel: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e1de516",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ==============================================================================\n",
+    "# CÉLULA DE TESTES DE ESTRESSE E CASOS DE BORDA\n",
+    "# ==============================================================================\n",
+    "print(\"--- INICIANDO TESTES DE ESTRESSE E CASOS DE BORDA ---\")\n",
+    "\n",
+    "# --- Teste 1: Grande Volume de Contas para um Único Banco ---\n",
+    "print(\"\\n--- Teste 1: Puxando um grande volume de contas para o Banco do Brasil ---\")\n",
+    "# Pegando as primeiras 50 contas do dicionário COSIF\n",
+    "contas_cosif_50 = analisador.df_cosif_prud['NOME_CONTA_COSIF'].dropna().unique()[:50].tolist()\n",
+    "data_teste = 202403\n",
+    "\n",
+    "dados_volume = analisador.get_dados_cosif(\n",
+    "    identificador='BCO DO BRASIL S.A.',\n",
+    "    contas=contas_cosif_50,\n",
+    "    datas=data_teste,\n",
+    "    documentos=4060\n",
+    ")\n",
+    "print(f\"Resultado: {len(dados_volume)} contas encontradas de 50 solicitadas.\")\n",
+    "display(dados_volume.head())\n",
+    "print(\"-\" * 50)\n",
+    "\n",
+    "\n",
+    "# --- Teste 2: Misturando Tipos de Identificadores na Tabela Comparativa ---\n",
+    "print(\"\\n--- Teste 2: Tabela comparativa com múltiplos tipos de identificadores ---\")\n",
+    "# Vamos usar nome curto, nome completo, CNPJ8 da entidade e CNPJ8 do líder\n",
+    "identificadores_mistos = [\n",
+    "    'ITAÚ',                                  # Nome curto\n",
+    "    'BANCO BRADESCO S.A.',                   # Nome completo\n",
+    "    '30680829',                              # CNPJ8 da Nu Financeira (entidade de interesse)\n",
+    "    '18236120'                               # CNPJ8 do Nu Pagamentos (líder que reporta)\n",
+    "]\n",
+    "indicadores_teste_2 = {\n",
+    "    'Patrimônio Líquido': {'tipo': 'COSIF', 'conta': 'PATRIMÔNIO LÍQUIDO'},\n",
+    "    'Situação': {'tipo': 'Atributo', 'atributo': 'SITUACAO_IFD_CAD'}\n",
+    "}\n",
+    "\n",
+    "tabela_mista = analisador.comparar_indicadores(\n",
+    "    identificadores=identificadores_mistos,\n",
+    "    indicadores=indicadores_teste_2,\n",
+    "    data=data_teste\n",
+    ")\n",
+    "print(\"Resultado da tabela com identificadores mistos:\")\n",
+    "display(tabela_mista)\n",
+    "print(\"-\" * 50)\n",
+    "\n",
+    "\n",
+    "# --- Teste 3: Tratamento de Inputs Inválidos ---\n",
+    "print(\"\\n--- Teste 3: Tratamento de identificadores e contas que não existem ---\")\n",
+    "identificadores_invalidos = ['BANCO INEXISTENTE SA', '99999999']\n",
+    "contas_invalidas = {'Indicador Inexistente': {'tipo': 'COSIF', 'conta': 'CONTA QUE NAO EXISTE'}}\n",
+    "\n",
+    "tabela_invalida = analisador.comparar_indicadores(\n",
+    "    identificadores=identificadores_invalidos,\n",
+    "    indicadores=contas_invalidas,\n",
+    "    data=data_teste\n",
+    ")\n",
+    "print(\"Resultado da tabela com inputs inválidos (esperado: tabela com erros e Nones):\")\n",
+    "display(tabela_invalida)\n",
+    "print(\"-\" * 50)\n",
+    "\n",
+    "\n",
+    "# --- Teste 4: Consulta COSIF Individual vs. Prudencial para a mesma entidade ---\n",
+    "print(\"\\n--- Teste 4: Comparando dados Individuais vs. Prudenciais ---\")\n",
+    "# Vamos usar o Banco do Brasil, que sabemos que reporta em ambos\n",
+    "conta_unica = 'TOTAL GERAL DO ATIVO'\n",
+    "\n",
+    "print(f\"\\nBuscando '{conta_unica}' para 'BCO DO BRASIL S.A.' (PRUDENCIAL):\")\n",
+    "dado_prudencial = analisador.get_dados_cosif(\n",
+    "    identificador='BCO DO BRASIL S.A.',\n",
+    "    contas=[conta_unica],\n",
+    "    datas=data_teste,\n",
+    "    tipo='prudencial',\n",
+    "    documentos=4060\n",
+    ")\n",
+    "display(dado_prudencial)\n",
+    "\n",
+    "print(f\"\\nBuscando '{conta_unica}' para 'BCO DO BRASIL S.A.' (INDIVIDUAL):\")\n",
+    "dado_individual = analisador.get_dados_cosif(\n",
+    "    identificador='BCO DO BRASIL S.A.',\n",
+    "    contas=[conta_unica],\n",
+    "    datas=data_teste,\n",
+    "    tipo='individual',\n",
+    "    documentos=4010 # Documento correspondente do individual\n",
+    ")\n",
+    "display(dado_individual)\n",
+    "print(\"-\" * 50)\n",
+    "\n",
+    "\n",
+    "# --- Teste 5: Série Temporal com Tratamento de Zeros e Nulos ---\n",
+    "print(\"\\n--- Teste 5: Série temporal com diferentes tratamentos de fillna ---\")\n",
+    "# Usando uma conta que pode ter zeros, como 'Letras de Crédito Imobiliário'\n",
+    "banco_serie = 'BANCO INTER'\n",
+    "conta_serie = 'Letras de Crédito Imobiliário (c1)'\n",
+    "data_inicio = 202401\n",
+    "data_fim = 202412\n",
+    "\n",
+    "print(f\"\\nSérie para '{conta_serie}' do {banco_serie} (Padrão: com 0 e NaN)\")\n",
+    "serie_padrao = analisador.get_serie_temporal_indicador(\n",
+    "    identificador=banco_serie, conta=conta_serie, data_inicio=data_inicio,\n",
+    "    data_fim=data_fim, fonte='IFDATA'\n",
+    ")\n",
+    "display(serie_padrao)\n",
+    "\n",
+    "print(f\"\\nMesma série (preenchendo ausentes com 0)\")\n",
+    "serie_fill_zero = analisador.get_serie_temporal_indicador(\n",
+    "    identificador=banco_serie, conta=conta_serie, data_inicio=data_inicio,\n",
+    "    data_fim=data_fim, fonte='IFDATA', fillna=0\n",
+    ")\n",
+    "display(serie_fill_zero)\n",
+    "\n",
+    "print(f\"\\nMesma série (tratando 0 como ausente)\")\n",
+    "serie_zeros_nan = analisador.get_serie_temporal_indicador(\n",
+    "    identificador=banco_serie, conta=conta_serie, data_inicio=data_inicio,\n",
+    "    data_fim=data_fim, fonte='IFDATA', fillna=np.nan\n",
+    ")\n",
+    "display(serie_zeros_nan)\n",
+    "print(\"-\" * 50)\n",
+    "\n",
+    "\n",
+    "# --- Teste 6: Tentativa de buscar dados de fontes cruzadas (deve falhar graciosamente) ---\n",
+    "print(\"\\n--- Teste 6: Buscando conta COSIF na fonte IFDATA (deve retornar vazio) ---\")\n",
+    "# Este teste verifica se a separação das fontes está funcionando.\n",
+    "dados_cruzados = analisador.get_dados_ifdata(\n",
+    "    identificador='BCO DO BRASIL S.A.',\n",
+    "    contas=['ATIVO REALIZÁVEL'], # Esta é uma conta COSIF\n",
+    "    datas=data_teste\n",
+    ")\n",
+    "print(f\"Resultado da busca cruzada: {len(dados_cruzados)} linhas encontradas (esperado: 0).\")\n",
+    "display(dados_cruzados)\n",
+    "print(\"\\n--- FIM DOS TESTES DE ESTRESSE ---\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e47e3c30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ==============================================================================\n",
+    "# CÉLULA DE TESTE: Consulta com Lista Mista de Nomes e Códigos de Contas\n",
+    "# ==============================================================================\n",
+    "print(\"\\n--- Testando consulta com lista mista de nomes e códigos ---\")\n",
+    "\n",
+    "# Vamos buscar o Ativo Total pelo NOME e o Patrimônio Líquido pelo CÓDIGO\n",
+    "contas_mistas = [\n",
+    "    'TOTAL GERAL DO ATIVO', # Busca por nome (string)\n",
+    "    60000002              # Busca por código (int) para 'PATRIMÔNIO LÍQUIDO'\n",
+    "]\n",
+    "banco_teste_misto = 'BANCO BRADESCO S.A.'\n",
+    "data_teste_misto = 202403\n",
+    "\n",
+    "# Chamando a função com a lista mista\n",
+    "dados_mistos = analisador.get_dados_cosif(\n",
+    "    identificador=banco_teste_misto,\n",
+    "    contas=contas_mistas,\n",
+    "    datas=data_teste_misto,\n",
+    "    documentos=4060\n",
+    ")\n",
+    "\n",
+    "# O output já contém as colunas de código e nome, tornando-o legível.\n",
+    "print(f\"Resultado da busca mista para '{banco_teste_misto}':\")\n",
+    "display(dados_mistos[['BANCO_CONSULTADO', 'CONTA_COSIF', 'NOME_CONTA_COSIF', 'VALOR_CONTA_COSIF']])\n",
+    "print(\"-\" * 50)"
    ]
   }
  ],
