--- a/Code/DataDownload.ipynb
+++ b/Code/DataDownload.ipynb
@@ -24,8 +24,46 @@
     "\n",
     "warnings.filterwarnings('ignore')\n",
     "pd.set_option('display.max_columns', 100)\n",
-    "pd.set_option('display.width', 1000)\n",
+    "pd.set_option('display.width', 1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4d33ba97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Configurações de Datas e Diretórios ---\n",
+    "# Use datas fixas para reprodutibilidade ou ajuste para datas dinâmicas.\n",
+    "# Ex: end=pd.Timestamp.now().strftime('%Y-%m-%d')\n",
+    "DATE_START = '2024-01-01'\n",
+    "DATE_END   = '2024-12-31'\n",
     "\n",
+    "date_range_monthly = pd.date_range(start=DATE_START, end=DATE_END, freq='M').strftime(\"%Y%m\").tolist()\n",
+    "date_range_quarterly = pd.date_range(start=DATE_START, end=DATE_END, freq='Q').strftime(\"%Y%m\").tolist()\n",
+    "\n",
+    "# Estrutura de diretórios\n",
+    "base_dir    = Path('..').resolve() # O notebook está na raiz do projeto ou em 'Code'\n",
+    "dir_inputs  = base_dir / 'Input'\n",
+    "dir_outputs = base_dir / 'Output'\n",
+    "for d in (dir_inputs, dir_outputs):\n",
+    "    d.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "print(f\"Diretório Base: {base_dir}\")\n",
+    "print(f\"Diretório de Inputs: {dir_inputs}\")\n",
+    "print(f\"Diretório de Outputs: {dir_outputs}\")\n",
+    "print(f\"\\nPeríodo de Análise Mensal: de {date_range_monthly[0]} a {date_range_monthly[-1]}\")\n",
+    "print(f\"Período de Análise Trimestral: de {date_range_quarterly[0]} a {date_range_quarterly[-1]}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be0ee1c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# --- Funções Auxiliares Locais ---\n",
     "\n",
     "def clean_text_column(series: pd.Series) -> pd.Series:\n",
@@ -60,29 +98,7 @@
     "            \n",
     "    dict_df['Exemplos'] = [get_example(col) for col in df.columns]\n",
     "    \n",
-    "    return dict_df\n",
-    "\n",
-    "# --- Configurações de Datas e Diretórios ---\n",
-    "# Use datas fixas para reprodutibilidade ou ajuste para datas dinâmicas.\n",
-    "# Ex: end=pd.Timestamp.now().strftime('%Y-%m-%d')\n",
-    "DATE_START = '2024-01-01'\n",
-    "DATE_END   = '2024-12-31'\n",
-    "\n",
-    "date_range_monthly = pd.date_range(start=DATE_START, end=DATE_END, freq='M').strftime(\"%Y%m\").tolist()\n",
-    "date_range_quarterly = pd.date_range(start=DATE_START, end=DATE_END, freq='Q').strftime(\"%Y%m\").tolist()\n",
-    "\n",
-    "# Estrutura de diretórios\n",
-    "base_dir    = Path('..').resolve() # O notebook está na raiz do projeto ou em 'Code'\n",
-    "dir_inputs  = base_dir / 'Input'\n",
-    "dir_outputs = base_dir / 'Output'\n",
-    "for d in (dir_inputs, dir_outputs):\n",
-    "    d.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "print(f\"Diretório Base: {base_dir}\")\n",
-    "print(f\"Diretório de Inputs: {dir_inputs}\")\n",
-    "print(f\"Diretório de Outputs: {dir_outputs}\")\n",
-    "print(f\"\\nPeríodo de Análise Mensal: de {date_range_monthly[0]} a {date_range_monthly[-1]}\")\n",
-    "print(f\"Período de Análise Trimestral: de {date_range_quarterly[0]} a {date_range_quarterly[-1]}\")"
+    "    return dict_df"
    ]
   },
   {
@@ -106,6 +122,8 @@
     "cosif_ind_dir.mkdir(parents=True, exist_ok=True)\n",
     "all_individual_csv_paths = []\n",
     "\n",
+    "suffixes = ['BANCOS.csv.zip', 'BANCOS.zip' , 'BANCOS.csv']\n",
+    "\n",
     "for date in date_range_monthly:\n",
     "    subfolder = cosif_ind_dir / date\n",
     "    subfolder.mkdir(exist_ok=True)\n",
@@ -116,35 +134,66 @@
     "        all_individual_csv_paths.extend(existing_csvs)\n",
     "        continue\n",
     "\n",
-    "    url = f\"https://www.bcb.gov.br/content/estabilidadefinanceira/cosif/Bancos/{date}BANCOS.csv.zip\"\n",
-    "    local_zip_file = subfolder / f\"{date}_cosif_individual.zip\"\n",
-    "    \n",
-    "    print(f\"COSIF Ind. ({date}): Baixando de {url}...\")\n",
-    "    try:\n",
-    "        resp = requests.get(url, timeout=90)\n",
-    "        resp.raise_for_status()\n",
-    "        \n",
-    "        content_type = resp.headers.get('Content-Type', '').lower()\n",
-    "        if 'zip' in content_type and 'html' not in content_type:\n",
-    "            with open(local_zip_file, 'wb') as f:\n",
-    "                f.write(resp.content)\n",
-    "            \n",
-    "            with zipfile.ZipFile(local_zip_file, 'r') as zf:\n",
-    "                for member in zf.namelist():\n",
-    "                    if member.lower().endswith('.csv') and \"bancos\" in member.lower():\n",
-    "                        zf.extract(member, subfolder)\n",
-    "                        extracted_file = subfolder / member\n",
-    "                        all_individual_csv_paths.append(extracted_file)\n",
-    "                        print(f\"  -> Sucesso! Arquivo '{member}' extraído.\")\n",
-    "        else:\n",
-    "            print(f\"  -> Falha: Conteúdo recebido não é um ZIP. (Content-Type: {content_type})\")\n",
+    "    download_success = False\n",
+    "    for suffix in suffixes:\n",
+    "        if download_success:\n",
+    "            break # Se já baixou para esta data, sai do loop de sufixos\n",
     "\n",
-    "    except requests.exceptions.RequestException as e:\n",
-    "        print(f\"  -> Erro no download: {e}\")\n",
-    "    except zipfile.BadZipFile:\n",
-    "        print(\"  -> Erro: Arquivo baixado não é um ZIP válido.\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"  -> Erro inesperado: {e}\")\n",
+    "        url = f\"https://www.bcb.gov.br/content/estabilidadefinanceira/cosif/Bancos/{date}{suffix}\"\n",
+    "        local_file = subfolder / f\"{date}_{suffix.replace('.', '_')}\" # Nome de arquivo local seguro\n",
+    "\n",
+    "        print(f\"COSIF Ind. ({date}): Tentando baixar de {url}...\")\n",
+    "        try:\n",
+    "            resp = requests.get(url, timeout=90)\n",
+    "            resp.raise_for_status() # Lança erro para status 4xx/5xx\n",
+    "\n",
+    "            content_type = resp.headers.get('Content-Type', '').lower()\n",
+    "            # Validação para garantir que não é uma página de erro HTML\n",
+    "            if 'html' in content_type:\n",
+    "                print(\"  -> Falha: Recebido conteúdo HTML, pulando para próximo sufixo.\")\n",
+    "                continue\n",
+    "\n",
+    "            # --- Lógica para tratar ZIP ---\n",
+    "            if 'zip' in suffix.lower():\n",
+    "                with open(local_file, 'wb') as f:\n",
+    "                    f.write(resp.content)\n",
+    "                \n",
+    "                with zipfile.ZipFile(local_file, 'r') as zf:\n",
+    "                    extracted = False\n",
+    "                    for member in zf.namelist():\n",
+    "                        if member.lower().endswith('.csv') and \"bancos\" in member.lower():\n",
+    "                            zf.extract(member, subfolder)\n",
+    "                            extracted_file = subfolder / member\n",
+    "                            all_individual_csv_paths.append(extracted_file)\n",
+    "                            print(f\"  -> Sucesso! Arquivo '{member}' extraído de '{local_file.name}'.\")\n",
+    "                            extracted = True\n",
+    "                    if extracted:\n",
+    "                        download_success = True # Marca o sucesso para esta data\n",
+    "                    else:\n",
+    "                        print(\"  -> Falha: ZIP baixado não contém o CSV esperado.\")\n",
+    "\n",
+    "            # --- Lógica para tratar CSV direto ---\n",
+    "            elif '.csv' in suffix.lower():\n",
+    "                # Salva o arquivo CSV diretamente\n",
+    "                with open(local_file, 'wb') as f:\n",
+    "                    f.write(resp.content)\n",
+    "                all_individual_csv_paths.append(local_file)\n",
+    "                print(f\"  -> Sucesso! Arquivo CSV '{local_file.name}' baixado diretamente.\")\n",
+    "                download_success = True # Marca o sucesso para esta data\n",
+    "\n",
+    "        except requests.exceptions.HTTPError as e:\n",
+    "            # Erro comum para arquivo não encontrado (404), não é um erro fatal do script\n",
+    "            print(f\"  -> Info: Arquivo não encontrado em {url} (Status: {e.response.status_code}).\")\n",
+    "        except requests.exceptions.RequestException as e:\n",
+    "            print(f\"  -> Erro de conexão ao tentar {url}: {e}\")\n",
+    "        except zipfile.BadZipFile:\n",
+    "            print(f\"  -> Erro: Arquivo baixado de {url} não é um ZIP válido.\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"  -> Erro inesperado ao processar {url}: {e}\")\n",
+    "\n",
+    "    # Se após todas as tentativas o download falhou para a data\n",
+    "    if not download_success:\n",
+    "        print(f\"COSIF Ind. ({date}): FALHA no download após tentar todos os sufixos.\")\n",
     "\n",
     "# --- 2. Leitura e Consolidação dos CSVs ---\n",
     "df_list = []\n",
@@ -238,6 +287,8 @@
     "cosif_prud_dir.mkdir(parents=True, exist_ok=True)\n",
     "all_prudencial_csv_paths = []\n",
     "\n",
+    "suffixes = ['BLOPRUDENCIAL.csv.zip', 'BLOPRUDENCIAL.zip', 'BLOPRUDENCIAL.csv']\n",
+    "\n",
     "for date in date_range_monthly:\n",
     "    subfolder = cosif_prud_dir / date\n",
     "    subfolder.mkdir(exist_ok=True)\n",
@@ -248,35 +299,68 @@
     "        all_prudencial_csv_paths.extend(existing_csvs)\n",
     "        continue\n",
     "\n",
-    "    url = f\"https://www.bcb.gov.br/content/estabilidadefinanceira/cosif/Conglomerados-prudenciais/{date}BLOPRUDENCIAL.csv.zip\"\n",
-    "    local_zip_file = subfolder / f\"{date}_cosif_prudencial.zip\"\n",
-    "    \n",
-    "    print(f\"COSIF Prud. ({date}): Baixando de {url}...\")\n",
-    "    try:\n",
-    "        resp = requests.get(url, timeout=90)\n",
-    "        resp.raise_for_status()\n",
-    "        \n",
-    "        content_type = resp.headers.get('Content-Type', '').lower()\n",
-    "        if 'zip' in content_type and 'html' not in content_type:\n",
-    "            with open(local_zip_file, 'wb') as f:\n",
-    "                f.write(resp.content)\n",
-    "            \n",
-    "            with zipfile.ZipFile(local_zip_file, 'r') as zf:\n",
-    "                for member in zf.namelist():\n",
-    "                    if member.lower().endswith('.csv') and \"prudencial\" in member.lower():\n",
-    "                        zf.extract(member, subfolder)\n",
-    "                        extracted_file = subfolder / member\n",
-    "                        all_prudencial_csv_paths.append(extracted_file)\n",
-    "                        print(f\"  -> Sucesso! Arquivo '{member}' extraído.\")\n",
-    "        else:\n",
-    "            print(f\"  -> Falha: Conteúdo recebido não é um ZIP. (Content-Type: {content_type})\")\n",
-    "            \n",
-    "    except requests.exceptions.RequestException as e:\n",
-    "        print(f\"  -> Erro no download: {e}\")\n",
-    "    except zipfile.BadZipFile:\n",
-    "        print(\"  -> Erro: Arquivo baixado não é um ZIP válido.\")\n",
-    "    except Exception as e:\n",
-    "        print(f\"  -> Erro inesperado: {e}\")\n",
+    "    download_success = False\n",
+    "    for suffix in suffixes:\n",
+    "        if download_success:\n",
+    "            break # Se já baixou para esta data, sai do loop de sufixos\n",
+    "\n",
+    "        ### ALTERAÇÃO: URL base para o COSIF Prudencial\n",
+    "        url = f\"https://www.bcb.gov.br/content/estabilidadefinanceira/cosif/Conglomerados-prudenciais/{date}{suffix}\"\n",
+    "        local_file = subfolder / f\"{date}_{suffix.replace('.', '_')}\" # Nome de arquivo local seguro\n",
+    "\n",
+    "        print(f\"COSIF Prud. ({date}): Tentando baixar de {url}...\")\n",
+    "        try:\n",
+    "            resp = requests.get(url, timeout=90)\n",
+    "            resp.raise_for_status() # Lança erro para status 4xx/5xx\n",
+    "\n",
+    "            content_type = resp.headers.get('Content-Type', '').lower()\n",
+    "            # Validação para garantir que não é uma página de erro HTML\n",
+    "            if 'html' in content_type:\n",
+    "                print(\"  -> Falha: Recebido conteúdo HTML, pulando para próximo sufixo.\")\n",
+    "                continue\n",
+    "\n",
+    "            # --- Lógica para tratar ZIP ---\n",
+    "            if 'zip' in suffix.lower():\n",
+    "                with open(local_file, 'wb') as f:\n",
+    "                    f.write(resp.content)\n",
+    "                \n",
+    "                with zipfile.ZipFile(local_file, 'r') as zf:\n",
+    "                    extracted = False\n",
+    "                    for member in zf.namelist():\n",
+    "                        ### ALTERAÇÃO: Verificação do nome do arquivo interno específica para Prudencial\n",
+    "                        if member.lower().endswith('.csv') and \"prudencial\" in member.lower():\n",
+    "                            zf.extract(member, subfolder)\n",
+    "                            extracted_file = subfolder / member\n",
+    "                            all_prudencial_csv_paths.append(extracted_file)\n",
+    "                            print(f\"  -> Sucesso! Arquivo '{member}' extraído de '{local_file.name}'.\")\n",
+    "                            extracted = True\n",
+    "                    if extracted:\n",
+    "                        download_success = True # Marca o sucesso para esta data\n",
+    "                    else:\n",
+    "                        print(\"  -> Falha: ZIP baixado não contém o CSV esperado.\")\n",
+    "\n",
+    "            # --- Lógica para tratar CSV direto ---\n",
+    "            elif '.csv' in suffix.lower():\n",
+    "                # Salva o arquivo CSV diretamente\n",
+    "                with open(local_file, 'wb') as f:\n",
+    "                    f.write(resp.content)\n",
+    "                all_prudencial_csv_paths.append(local_file)\n",
+    "                print(f\"  -> Sucesso! Arquivo CSV '{local_file.name}' baixado diretamente.\")\n",
+    "                download_success = True # Marca o sucesso para esta data\n",
+    "\n",
+    "        except requests.exceptions.HTTPError as e:\n",
+    "            # Erro comum para arquivo não encontrado (404), não é um erro fatal do script\n",
+    "            print(f\"  -> Info: Arquivo não encontrado em {url} (Status: {e.response.status_code}).\")\n",
+    "        except requests.exceptions.RequestException as e:\n",
+    "            print(f\"  -> Erro de conexão ao tentar {url}: {e}\")\n",
+    "        except zipfile.BadZipFile:\n",
+    "            print(f\"  -> Erro: Arquivo baixado de {url} não é um ZIP válido.\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"  -> Erro inesperado ao processar {url}: {e}\")\n",
+    "\n",
+    "    # Se após todas as tentativas o download falhou para a data\n",
+    "    if not download_success:\n",
+    "        print(f\"COSIF Prud. ({date}): FALHA no download após tentar todos os sufixos.\")\n",
     "\n",
     "# --- 2. Leitura e Consolidação dos CSVs ---\n",
     "df_list = []\n",
