--- a/Analysis/DataAnalysis_example.ipynb
+++ b/Analysis/DataAnalysis_example.ipynb
@@ -3,13 +3,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbe5d84b",
+   "id": "1d612057",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# ==============================================================================\n",
+    "# SEÇÃO 0: SETUP E INICIALIZAÇÃO\n",
+    "# ==============================================================================\n",
+    "# Este bloco configura o ambiente, importa as bibliotecas necessárias e\n",
+    "# inicializa o AnalisadorBancario, deixando-o pronto para uso.\n",
+    "# ------------------------------------------------------------------------------\n",
+    "print(\"--- INICIANDO SETUP E INICIALIZAÇÃO ---\")\n",
+    "\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from pathlib import Path\n",
     "import sys\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "# Adiciona o diretório 'Code' ao path para encontrar o DataUtils\n",
     "code_dir = Path('..').resolve() / 'Code'\n",
@@ -18,112 +28,231 @@
     "\n",
     "from DataUtils import AnalisadorBancario\n",
     "\n",
-    "# --- Configurações ---\n",
+    "# Configurações de exibição do Pandas e Matplotlib\n",
     "pd.set_option('display.float_format', lambda x: f'{x:,.2f}')\n",
+    "pd.set_option('display.max_rows', 100)\n",
+    "plt.style.use('seaborn-v0_8-whitegrid')\n",
+    "\n",
+    "# Inicializa o Analisador (carrega todos os dados em memória)\n",
     "output_dir = Path('..').resolve() / 'Output'\n",
+    "analisador = AnalisadorBancario(diretorio_output=str(output_dir))\n",
     "\n",
-    "# --- Inicializar o Analisador ---\n",
-    "# A classe carrega todos os dados na inicialização.\n",
-    "analisador = AnalisadorBancario(diretorio_output=str(output_dir))"
+    "print(\"\\n--- SETUP CONCLUÍDO. ANALISADOR PRONTO PARA USO. ---\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6514a91a",
+   "id": "68227ff1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Objetivo: Pegar o Patrimônio Líquido e o Ativo Total do Itaú em dez/2023.\n",
-    "# Usaremos o COSIF Prudencial, que é o padrão.\n",
-    "# Para balanços, o documento 4060 é geralmente o balancete e 4066 o balanço. Vamos pegar de ambos.\n",
+    "# ==============================================================================\n",
+    "# SEÇÃO 1: DEMONSTRAÇÕES DE CONSULTAS BÁSICAS\n",
+    "# ==============================================================================\n",
+    "# Esta seção mostra como usar os métodos fundamentais para extrair dados\n",
+    "# de cada uma das fontes principais.\n",
+    "# ------------------------------------------------------------------------------\n",
     "\n",
-    "contas_interesse = ['ATIVO REALIZÁVEL', 'Caixa']\n",
-    "data_interesse = 202412\n",
-    "\n",
-    "dados_itau_cosif = analisador.get_dados_cosif(\n",
+    "# --- 1.1: Buscando dados contábeis da fonte COSIF ---\n",
+    "print(\"\\n--- 1.1: Consulta básica de dados COSIF ---\")\n",
+    "dados_cosif = analisador.get_dados_cosif(\n",
     "    identificador='BCO DO BRASIL S.A.',\n",
-    "    contas=contas_interesse,\n",
-    "    datas=data_interesse,\n",
-    "    documentos=[4060, 4066] # Exemplo de filtro por documento\n",
+    "    contas=['ATIVO REALIZÁVEL', 'Caixa'],\n",
+    "    datas=202403,\n",
+    "    documentos=4060 # Filtra pelo balancete prudencial\n",
     ")\n",
+    "print(\"Resultado para 'BCO DO BRASIL S.A.' (COSIF):\")\n",
+    "display(dados_cosif)\n",
+    "print(\"-\" * 80)\n",
     "\n",
-    "print(\"--- Dados COSIF para Bco do Brasil ---\")\n",
-    "display(dados_itau_cosif)"
+    "\n",
+    "# --- 1.2: Buscando indicadores regulatórios da fonte IF.DATA ---\n",
+    "print(\"\\n--- 1.2: Consulta básica de dados IF.DATA ---\")\n",
+    "dados_ifdata = analisador.get_dados_ifdata(\n",
+    "    identificador='28195667', # CNPJ do Banco ABC Brasil\n",
+    "    contas=[78282, 78283, 78284], # Códigos para Depósitos à Vista, Poupança, etc.\n",
+    "    datas=202403\n",
+    ")\n",
+    "print(\"Resultado para 'BANCO ABC BRASIL S.A.' (IF.DATA):\")\n",
+    "display(dados_ifdata)\n",
+    "print(\"-\" * 80)\n",
+    "\n",
+    "\n",
+    "# --- 1.3: Buscando atributos do cadastro das instituições ---\n",
+    "print(\"\\n--- 1.3: Consulta de atributos do cadastro ---\")\n",
+    "atributos_cadastro = analisador.get_atributos_cadastro(\n",
+    "    identificador=['ITAU', 'BRADESCO', 'NUBANK'],\n",
+    "    atributos=['TCB_IFD_CAD', 'SITUACAO_IFD_CAD', 'SR_IFD_CAD']\n",
+    ")\n",
+    "print(\"Resultado para atributos de cadastro:\")\n",
+    "display(atributos_cadastro)\n",
+    "print(\"-\" * 80)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37e50951",
+   "id": "feda8e50",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Objetivo: Tentar pegar o mesmo dado para a Nu Financeira.\n",
-    "# A classe deve traduzir '30680829' para os identificadores corretos.\n",
+    "# ==============================================================================\n",
+    "# SEÇÃO 2: DEMONSTRAÇÕES DE ANÁLISE AGREGADA\n",
+    "# ==============================================================================\n",
+    "# Esta seção mostra os métodos de alto nível para comparar instituições\n",
+    "# e analisar a evolução de indicadores ao longo do tempo.\n",
+    "# ------------------------------------------------------------------------------\n",
     "\n",
-    "dados_nubank_cosif = analisador.get_dados_cosif(\n",
-    "    identificador='18236120', # CNPJ da Nu Financeira\n",
-    "    contas=contas_interesse,\n",
-    "    datas=data_interesse\n",
-    ")\n",
-    "\n",
-    "print(\"\\n--- Dados COSIF para Nubank (via CNPJ da Financeira) ---\")\n",
-    "# Esperamos que a classe encontre os dados reportados pelo CNPJ do líder (18236120)\n",
-    "display(dados_nubank_cosif)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "858cef91",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Objetivo: Ver a situação cadastral e o segmento dos grandes bancos.\n",
-    "\n",
-    "bancos = ['BCO DO BRASIL S.A.', 'BRB - BCO DE BRASILIA S.A.', 'CAIXA ECONOMICA FEDERAL']\n",
-    "\n",
-    "atributos = ['SITUACAO_IFD_CAD', 'SEGMENTOTB_IFD_CAD']\n",
-    "\n",
-    "cadastro_bancos = analisador.get_atributos_cadastro(\n",
-    "    identificador=bancos,\n",
-    "    atributos=atributos\n",
-    ")\n",
-    "\n",
-    "print(\"\\n--- Atributos de Cadastro ---\")\n",
-    "display(cadastro_bancos)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0abc9369",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Objetivo: Criar a tabela comparativa que discutimos.\n",
-    "\n",
-    "# Definimos os indicadores que queremos na nossa tabela\n",
-    "indicadores_desejados = {\n",
+    "# --- 2.1: Criando uma tabela comparativa de indicadores ---\n",
+    "print(\"\\n--- 2.1: Tabela comparativa de indicadores (Pares) ---\")\n",
+    "indicadores = {\n",
     "    'Patrimônio Líquido': {'tipo': 'COSIF', 'conta': 'PATRIMÔNIO LÍQUIDO'},\n",
     "    'Total Ativos': {'tipo': 'COSIF', 'conta': 'TOTAL GERAL DO ATIVO'},\n",
-    "    # Adicionar o indicador de Basileia do IFDATA aqui quando o método estiver completo\n",
+    "    'Índice de Basileia': {'tipo': 'IFDATA', 'conta': 'Índice de Basileia'},\n",
     "    'Situação': {'tipo': 'Atributo', 'atributo': 'SITUACAO_IFD_CAD'}\n",
     "}\n",
+    "bancos = ['61190658', 'BANCO BRADESCO', 'NU FINANCEIRA', 'BANCO BTG PACTUAL', 'BCO DO BRASIL S.A.']\n",
     "\n",
-    "# Lista de bancos para a comparação\n",
-    "bancos_para_comparar = ['ITAU', 'BRADESCO', 'NUBANK', 'BTG PACTUAL']\n",
-    "\n",
-    "# Gerar a tabela\n",
     "tabela_comparativa = analisador.comparar_indicadores(\n",
-    "    identificadores=bancos_para_comparar,\n",
-    "    indicadores=indicadores_desejados,\n",
-    "    data=202412\n",
+    "    identificadores=bancos,\n",
+    "    indicadores=indicadores,\n",
+    "    data=202403,\n",
+    "    documento_cosif=4060 \n",
     ")\n",
+    "print(\"Comparativo de indicadores para os principais bancos:\")\n",
+    "display(tabela_comparativa)\n",
+    "print(\"-\" * 80)\n",
     "\n",
-    "print(\"\\n--- Tabela Comparativa de Indicadores (Dez/2024) ---\")\n",
-    "display(tabela_comparativa)"
+    "\n",
+    "# --- 2.2: Gerando uma série temporal e plotando um gráfico ---\n",
+    "print(\"\\n--- 2.2: Série temporal de um indicador ---\")\n",
+    "serie_temporal = analisador.get_serie_temporal_indicador(\n",
+    "    identificador='NU FINANCEIRA',\n",
+    "    conta='TOTAL GERAL DO ATIVO',\n",
+    "    data_inicio=202401,\n",
+    "    data_fim=202412,\n",
+    "    fonte='COSIF'\n",
+    ")\n",
+    "print(\"Série Temporal para 'TOTAL GERAL DO ATIVO' do Nubank:\")\n",
+    "display(serie_temporal)\n",
+    "\n",
+    "# Plotando o resultado\n",
+    "if not serie_temporal.empty:\n",
+    "    fig, ax = plt.subplots(figsize=(12, 6))\n",
+    "    serie_temporal.plot(ax=ax, marker='o', linestyle='-', title=\"Evolução do Ativo Total - Nubank\")\n",
+    "    ax.set_ylabel(\"Valor (em R$)\")\n",
+    "    ax.set_xlabel(\"Data\")\n",
+    "    ax.yaxis.set_major_formatter(plt.FuncFormatter(lambda x, p: f'R$ {x/1e9:,.0f} bi')) # Formata em bilhões\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "print(\"-\" * 80)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aade0796",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ==============================================================================\n",
+    "# SEÇÃO 3: TÉCNICAS AVANÇADAS E CASOS DE BORDA\n",
+    "# ==============================================================================\n",
+    "# Esta seção demonstra a flexibilidade e robustez da classe em cenários\n",
+    "# mais complexos e no tratamento de erros.\n",
+    "# ------------------------------------------------------------------------------\n",
+    "\n",
+    "# --- 3.1: Consulta com lista mista de nomes e códigos de contas ---\n",
+    "print(\"\\n--- 3.1: Flexibilidade de consulta (nomes e códigos de contas) ---\")\n",
+    "contas_mistas = [\n",
+    "    'TOTAL GERAL DO ATIVO', # Busca por nome\n",
+    "    60000002                # Busca pelo código do 'PATRIMÔNIO LÍQUIDO'\n",
+    "]\n",
+    "dados_mistos = analisador.get_dados_cosif(\n",
+    "    identificador='BANCO BRADESCO S.A.',\n",
+    "    contas=contas_mistas,\n",
+    "    datas=202403,\n",
+    "    documentos=4060\n",
+    ")\n",
+    "print(\"Resultado da busca mista para 'BANCO BRADESCO S.A.':\")\n",
+    "display(dados_mistos[['Nome_Entidade', 'CONTA_COSIF', 'NOME_CONTA_COSIF', 'VALOR_CONTA_COSIF']])\n",
+    "print(\"-\" * 80)\n",
+    "\n",
+    "\n",
+    "# --- 3.2: Comparando dados Individuais vs. Prudenciais ---\n",
+    "print(\"\\n--- 3.2: Diferença entre dados Individuais e Prudenciais ---\")\n",
+    "conta_unica = 'TOTAL GERAL DO ATIVO'\n",
+    "dado_prudencial = analisador.get_dados_cosif(identificador='BCO DO BRASIL S.A.', contas=[conta_unica], datas=202403, tipo='prudencial')\n",
+    "dado_individual = analisador.get_dados_cosif(identificador='BCO DO BRASIL S.A.', contas=[conta_unica], datas=202403, tipo='individual')\n",
+    "\n",
+    "print(f\"Ativo Total (Prudencial): {dado_prudencial['VALOR_CONTA_COSIF'].iloc[0]:,.2f}\")\n",
+    "print(f\"Ativo Total (Individual): {dado_individual['VALOR_CONTA_COSIF'].iloc[0]:,.2f}\")\n",
+    "print(\"-\" * 80)\n",
+    "\n",
+    "\n",
+    "# --- 3.3: Tratamento de Zeros e Nulos com `fillna` ---\n",
+    "print(\"\\n--- 3.3: Flexibilidade no tratamento de nulos (fillna) ---\")\n",
+    "banco_serie = 'BANCO INTER'\n",
+    "conta_serie = 'Letras de Crédito Imobiliário (c1)'\n",
+    "print(f\"Série para '{conta_serie}' do {banco_serie} (Padrão: com 0 e NaN)\")\n",
+    "serie_padrao = analisador.get_serie_temporal_indicador(\n",
+    "    identificador=banco_serie, \n",
+    "    conta=conta_serie, \n",
+    "    data_inicio=202401, \n",
+    "    data_fim=202406, \n",
+    "    fonte='IFDATA'\n",
+    "    )\n",
+    "display(serie_padrao)\n",
+    "\n",
+    "print(f\"\\nMesma série (preenchendo ausentes com 0)\")\n",
+    "serie_fill_zero = analisador.get_serie_temporal_indicador(\n",
+    "    identificador=banco_serie, \n",
+    "    conta=conta_serie, \n",
+    "    data_inicio=202401, \n",
+    "    data_fim=202406, \n",
+    "    fonte='IFDATA', \n",
+    "    fillna=0)\n",
+    "display(serie_fill_zero)\n",
+    "\n",
+    "print(f\"\\nMesma série (tratando 0 como ausente)\")\n",
+    "serie_zeros_nan = analisador.get_serie_temporal_indicador(\n",
+    "    identificador=banco_serie, \n",
+    "    conta=conta_serie, \n",
+    "    data_inicio=202401, \n",
+    "    data_fim=202406, \n",
+    "    fonte='IFDATA', \n",
+    "    fillna=np.nan)\n",
+    "display(serie_zeros_nan)\n",
+    "print(\"-\" * 80)\n",
+    "\n",
+    "\n",
+    "# --- 3.4: Tratamento de inputs inválidos ---\n",
+    "print(\"\\n--- 3.4: Robustez contra inputs inválidos ---\")\n",
+    "identificadores_invalidos = ['BANCO QUE NAO EXISTE', '99999999']\n",
+    "contas_invalidas = {'Indicador Inexistente': {'tipo': 'COSIF', 'conta': 'CONTA QUE NAO EXISTE'}}\n",
+    "\n",
+    "tabela_invalida = analisador.comparar_indicadores(\n",
+    "    identificadores=identificadores_invalidos,\n",
+    "    indicadores=contas_invalidas,\n",
+    "    data=202403\n",
+    ")\n",
+    "print(\"Resultado da tabela com inputs inválidos (esperado: tabela com erros e Nones):\")\n",
+    "display(tabela_invalida)\n",
+    "print(\"-\" * 80)\n",
+    "\n",
+    "\n",
+    "# --- 3.5: Robustez das fontes (busca cruzada) ---\n",
+    "print(\"\\n--- 3.5: Robustez na separação de fontes ---\")\n",
+    "dados_cruzados = analisador.get_dados_ifdata(\n",
+    "    identificador='BCO DO BRASIL S.A.',\n",
+    "    contas=['ATIVO REALIZÁVEL'],\n",
+    "    datas=202403\n",
+    ")\n",
+    "print(f\"Buscando conta COSIF na fonte IFDATA. Linhas encontradas: {len(dados_cruzados)} (esperado: 0).\")\n",
+    "display(dados_cruzados)\n",
+    "\n",
+    "print(\"\\n\\n--- FIM DAS DEMONSTRAÇÕES ---\")"
    ]
   }
  ],
