New timeseries functionalities

--- a/Analysis/DataAnalysis.ipynb
+++ b/Analysis/DataAnalysis.ipynb
@@ -69,14 +69,13 @@
     "    print(\"Amostra da lista (padronizada para 8 dígitos):\", lista_de_bancos_do_csv[:5])\n",
     "\n",
     "except FileNotFoundError:\n",
-    "    print(f\"ERRO: O arquivo 'Banks.csv' não foi encontrado no diretório 'Analysis/'.\")\n",
+    "    print(\"ERRO: O arquivo 'Banks.csv' não foi encontrado no diretório 'Analysis/'.\")\n",
     "    lista_de_bancos_do_csv = []\n",
     "\n",
     "# Só continua se a lista de bancos não estiver vazia\n",
     "if lista_de_bancos_do_csv:\n",
     "    # Passo 2: Definir os indicadores\n",
     "    indicadores_desejados = {\n",
-    "        'Índice de Basileia': {'tipo': 'IFDATA', 'conta': 'Índice de Basileia'},\n",
     "        'TCB': {'tipo': 'Atributo', 'atributo': 'TCB_IFD_CAD'},\n",
     "        'Volume de Operações tipo A': {'tipo': 'IFDATA', 'conta': 'A'},\n",
     "        'Volume de Operações tipo AA': {'tipo': 'IFDATA', 'conta': 'AA'},\n",
@@ -91,9 +90,7 @@
     "        'Depósitos a Prazo': {'tipo': 'IFDATA', 'conta': 'Depósitos a Prazo (a4)'},\n",
     "        'Letra de Crédito Imobiliário': {'tipo': 'IFDATA', 'conta': 'Letras de Crédito Imobiliário (c1)'},\n",
     "        'Letra de Crédito Agronegócio': {'tipo': 'IFDATA', 'conta': 'Letras de Crédito do Agronegócio (c2)'},\n",
-    "        'Letras Financeiras': {'tipo': 'IFDATA', 'conta': 'Letras Financeiras (c3)'},\n",
-    "        'RWA': {'tipo': 'IFDATA', 'conta': 'Patrimônio de Referência para Comparação com o RWA'},\n",
-    "        'Ativo Total': {'tipo': 'IFDATA', 'conta': 'Ativo Total'}\n",
+    "        'Letras Financeiras': {'tipo': 'IFDATA', 'conta': 'Letras Financeiras (c3)'}\n",
     "        }\n",
     "\n",
     "    # Passo 3: Chamar a função 'comparar_indicadores'\n",
@@ -123,6 +120,81 @@
     "        print(f\"\\nRelatório salvo com sucesso em: '{caminho_output_tabela.resolve()}'\")\n",
     "    except Exception as e:\n",
     "        print(f\"\\nErro ao salvar o relatório em Excel: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2fc2b4a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import pandas as pd\n",
+    "\n",
+    "# Garante que a pasta Results existe\n",
+    "results_dir = Path('.') / 'Results'\n",
+    "results_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "# Passo 1: Carregar a lista de CNPJs\n",
+    "print(\"--- Lendo a lista de bancos do arquivo Banks.csv ---\")\n",
+    "try:\n",
+    "    caminho_csv = Path('.') / 'Banks.csv'\n",
+    "    df_bancos_interesse = pd.read_csv(caminho_csv, dtype={'CNPJ': str}, sep=';')\n",
+    "    # lista_de_bancos = [du.standardize_cnpj_base8(cnpj) for cnpj in df_bancos_interesse['CNPJ'].tolist()]\n",
+    "    lista_de_bancos = df_bancos_interesse['CNPJ'].str.slice(0, 8).tolist() # Simplificação, se não tiver a função\n",
+    "    print(f\"Encontrados {len(lista_de_bancos)} bancos para análise.\")\n",
+    "except FileNotFoundError:\n",
+    "    print(\"ERRO: O arquivo 'Banks.csv' não foi encontrado.\")\n",
+    "    lista_de_bancos = []\n",
+    "\n",
+    "# Passo 2: Definir as contas de interesse\n",
+    "contas_de_interesse = [\n",
+    "    'Lucro Líquido',\n",
+    "    'Ativo Total',\n",
+    "    'Patrimônio Líquido',\n",
+    "    'Patrimônio de Referência para Comparação com o RWA',\n",
+    "    'Índice de Basileia'\n",
+    "]\n",
+    "\n",
+    "# Passo 3: Obter séries temporais\n",
+    "lista_de_dfs = []\n",
+    "\n",
+    "if lista_de_bancos:\n",
+    "    for banco in lista_de_bancos:\n",
+    "        for conta in contas_de_interesse:\n",
+    "            try:\n",
+    "                # A mágica acontece aqui: pedimos o formato 'long' diretamente\n",
+    "                df_serie_long = analisador.get_serie_temporal_indicador(\n",
+    "                    identificador=banco,\n",
+    "                    conta=conta,\n",
+    "                    data_inicio=202201,\n",
+    "                    data_fim=202412,\n",
+    "                    fonte='IFDATA',\n",
+    "                    formato_saida='long'\n",
+    "                )\n",
+    "\n",
+    "                if not df_serie_long.empty:\n",
+    "                    # Filtra apenas datas trimestrais\n",
+    "                    df_serie_long = df_serie_long[df_serie_long['DATA'].dt.month.isin([3, 6, 9, 12])]\n",
+    "                    lista_de_dfs.append(df_serie_long)\n",
+    "\n",
+    "            except Exception as e:\n",
+    "                print(f\"Erro ao processar banco {banco}, conta {conta}: {e}\")\n",
+    "\n",
+    "# Passo 4: Concatenar todos os resultados em um único DataFrame\n",
+    "if lista_de_dfs:\n",
+    "    df_final = pd.concat(lista_de_dfs, ignore_index=True)\n",
+    "else:\n",
+    "    df_final = pd.DataFrame()\n",
+    "\n",
+    "# Passo 5: Salvar em Excel\n",
+    "if not df_final.empty:\n",
+    "    caminho_saida = results_dir / 'series_temporais_long_format.xlsx'\n",
+    "    df_final.to_excel(caminho_saida, index=False)\n",
+    "    print(f\"Relatório salvo com sucesso em: {caminho_saida.resolve()}\")\n",
+    "else:\n",
+    "    print(\"Nenhum dado foi encontrado para gerar o relatório.\")"
    ]
   }
  ],
