--- a/Code/DataDownload.ipynb
+++ b/Code/DataDownload.ipynb
@@ -135,66 +135,65 @@
     "        continue\n",
     "\n",
     "    download_success = False\n",
+    "    error_messages = []\n",
+    "    \n",
+    "    print(f\"COSIF Ind. ({date}): Buscando arquivo...\", end='')\n",
+    "\n",
     "    for suffix in suffixes:\n",
     "        if download_success:\n",
-    "            break # Se já baixou para esta data, sai do loop de sufixos\n",
+    "            break\n",
     "\n",
     "        local_file = subfolder / f\"{date}{suffix}\"\n",
-    "\n",
     "        url = f\"https://www.bcb.gov.br/content/estabilidadefinanceira/cosif/Bancos/{date}{suffix}\"\n",
+    "        \n",
+    "        # Mensagem de tentativa que será sobrescrita\n",
+    "        print(f\"\\rCOSIF Ind. ({date}): Tentando sufixo '{suffix}'...\", end='')\n",
     "\n",
-    "        print(f\"COSIF Ind. ({date}): Tentando baixar de {url}...\")\n",
     "        try:\n",
     "            resp = requests.get(url, timeout=90)\n",
-    "            resp.raise_for_status() # Lança erro para status 4xx/5xx\n",
+    "            resp.raise_for_status()\n",
     "\n",
     "            content_type = resp.headers.get('Content-Type', '').lower()\n",
-    "            # Validação para garantir que não é uma página de erro HTML\n",
     "            if 'html' in content_type:\n",
-    "                print(\"  -> Falha: Recebido conteúdo HTML, pulando para próximo sufixo.\")\n",
+    "                error_messages.append(f\"'{suffix}': Recebido conteúdo HTML.\")\n",
     "                continue\n",
     "\n",
-    "            # --- Lógica para tratar ZIP ---\n",
     "            if 'zip' in suffix.lower():\n",
-    "                with open(local_file, 'wb') as f:\n",
-    "                    f.write(resp.content)\n",
-    "                \n",
+    "                with open(local_file, 'wb') as f: f.write(resp.content)\n",
     "                with zipfile.ZipFile(local_file, 'r') as zf:\n",
     "                    extracted = False\n",
     "                    for member in zf.namelist():\n",
     "                        if member.lower().endswith('.csv') and \"bancos\" in member.lower():\n",
     "                            zf.extract(member, subfolder)\n",
-    "                            extracted_file = subfolder / member\n",
-    "                            all_individual_csv_paths.append(extracted_file)\n",
-    "                            print(f\"  -> Sucesso! Arquivo '{member}' extraído de '{local_file.name}'.\")\n",
+    "                            all_individual_csv_paths.append(subfolder / member)\n",
     "                            extracted = True\n",
     "                    if extracted:\n",
-    "                        download_success = True # Marca o sucesso para esta data\n",
+    "                        download_success = True\n",
     "                    else:\n",
-    "                        print(\"  -> Falha: ZIP baixado não contém o CSV esperado.\")\n",
-    "\n",
-    "            # --- Lógica para tratar CSV direto ---\n",
+    "                        error_messages.append(f\"'{suffix}': ZIP não continha o CSV esperado.\")\n",
+    "            \n",
     "            elif '.csv' in suffix.lower():\n",
-    "                # Salva o arquivo CSV diretamente\n",
-    "                with open(local_file, 'wb') as f:\n",
-    "                    f.write(resp.content)\n",
+    "                with open(local_file, 'wb') as f: f.write(resp.content)\n",
     "                all_individual_csv_paths.append(local_file)\n",
-    "                print(f\"  -> Sucesso! Arquivo CSV '{local_file.name}' baixado diretamente.\")\n",
-    "                download_success = True # Marca o sucesso para esta data\n",
+    "                download_success = True\n",
     "\n",
     "        except requests.exceptions.HTTPError as e:\n",
-    "            # Erro comum para arquivo não encontrado (404), não é um erro fatal do script\n",
-    "            print(f\"  -> Info: Arquivo não encontrado em {url} (Status: {e.response.status_code}).\")\n",
+    "            error_messages.append(f\"'{suffix}': Não encontrado (Status {e.response.status_code})\")\n",
     "        except requests.exceptions.RequestException as e:\n",
-    "            print(f\"  -> Erro de conexão ao tentar {url}: {e}\")\n",
+    "            error_messages.append(f\"'{suffix}': Erro de conexão ({e})\")\n",
     "        except zipfile.BadZipFile:\n",
-    "            print(f\"  -> Erro: Arquivo baixado de {url} não é um ZIP válido.\")\n",
+    "            error_messages.append(f\"'{suffix}': Arquivo não é um ZIP válido.\")\n",
     "        except Exception as e:\n",
-    "            print(f\"  -> Erro inesperado ao processar {url}: {e}\")\n",
+    "            error_messages.append(f\"'{suffix}': Erro inesperado ({e})\")\n",
     "\n",
-    "    # Se após todas as tentativas o download falhou para a data\n",
-    "    if not download_success:\n",
-    "        print(f\"COSIF Ind. ({date}): FALHA no download após tentar todos os sufixos.\")\n",
+    "    # Limpa a linha de \"Tentando...\"\n",
+    "    print(\"\\r\" + \" \" * 80 + \"\\r\", end=\"\")\n",
+    "\n",
+    "    if download_success:\n",
+    "        print(f\"COSIF Ind. ({date}): Sucesso! Arquivo baixado e extraído.\")\n",
+    "    else:\n",
+    "        # Imprime uma única mensagem de falha consolidada\n",
+    "        print(f\"COSIF Ind. ({date}): FALHA no download. Motivos: {'; '.join(error_messages)}\")\n",
     "\n",
     "# --- 2. Leitura e Consolidação dos CSVs ---\n",
     "df_list = []\n",
@@ -301,68 +300,65 @@
     "        continue\n",
     "\n",
     "    download_success = False\n",
+    "    error_messages = []\n",
+    "\n",
+    "    print(f\"COSIF Prud. ({date}): Buscando arquivo...\", end='')\n",
+    "\n",
     "    for suffix in suffixes:\n",
     "        if download_success:\n",
-    "            break # Se já baixou para esta data, sai do loop de sufixos\n",
+    "            break\n",
     "\n",
     "        local_file = subfolder / f\"{date}{suffix}\"\n",
-    "\n",
-    "        ### URL base para o COSIF Prudencial\n",
     "        url = f\"https://www.bcb.gov.br/content/estabilidadefinanceira/cosif/Conglomerados-prudenciais/{date}{suffix}\"\n",
+    "        \n",
+    "        # Mensagem de tentativa que será sobrescrita\n",
+    "        print(f\"\\rCOSIF Prud. ({date}): Tentando sufixo '{suffix}'...\", end='')\n",
     "\n",
-    "        print(f\"COSIF Prud. ({date}): Tentando baixar de {url}...\")\n",
     "        try:\n",
     "            resp = requests.get(url, timeout=90)\n",
-    "            resp.raise_for_status() # Lança erro para status 4xx/5xx\n",
+    "            resp.raise_for_status()\n",
     "\n",
     "            content_type = resp.headers.get('Content-Type', '').lower()\n",
-    "            # Validação para garantir que não é uma página de erro HTML\n",
     "            if 'html' in content_type:\n",
-    "                print(\"  -> Falha: Recebido conteúdo HTML, pulando para próximo sufixo.\")\n",
+    "                error_messages.append(f\"'{suffix}': Recebido conteúdo HTML.\")\n",
     "                continue\n",
     "\n",
-    "            # --- Lógica para tratar ZIP ---\n",
     "            if 'zip' in suffix.lower():\n",
-    "                with open(local_file, 'wb') as f:\n",
-    "                    f.write(resp.content)\n",
-    "                \n",
+    "                with open(local_file, 'wb') as f: f.write(resp.content)\n",
     "                with zipfile.ZipFile(local_file, 'r') as zf:\n",
     "                    extracted = False\n",
     "                    for member in zf.namelist():\n",
-    "                        ### ALTERAÇÃO: Verificação do nome do arquivo interno específica para Prudencial\n",
     "                        if member.lower().endswith('.csv') and \"prudencial\" in member.lower():\n",
     "                            zf.extract(member, subfolder)\n",
-    "                            extracted_file = subfolder / member\n",
-    "                            all_prudencial_csv_paths.append(extracted_file)\n",
-    "                            print(f\"  -> Sucesso! Arquivo '{member}' extraído de '{local_file.name}'.\")\n",
+    "                            all_prudencial_csv_paths.append(subfolder / member)\n",
     "                            extracted = True\n",
     "                    if extracted:\n",
-    "                        download_success = True # Marca o sucesso para esta data\n",
+    "                        download_success = True\n",
     "                    else:\n",
-    "                        print(\"  -> Falha: ZIP baixado não contém o CSV esperado.\")\n",
+    "                        error_messages.append(f\"'{suffix}': ZIP não continha o CSV esperado.\")\n",
     "\n",
-    "            # --- Lógica para tratar CSV direto ---\n",
     "            elif '.csv' in suffix.lower():\n",
-    "                # Salva o arquivo CSV diretamente\n",
-    "                with open(local_file, 'wb') as f:\n",
-    "                    f.write(resp.content)\n",
+    "                with open(local_file, 'wb') as f: f.write(resp.content)\n",
     "                all_prudencial_csv_paths.append(local_file)\n",
-    "                print(f\"  -> Sucesso! Arquivo CSV '{local_file.name}' baixado diretamente.\")\n",
-    "                download_success = True # Marca o sucesso para esta data\n",
+    "                download_success = True\n",
     "\n",
     "        except requests.exceptions.HTTPError as e:\n",
-    "            # Erro comum para arquivo não encontrado (404), não é um erro fatal do script\n",
-    "            print(f\"  -> Info: Arquivo não encontrado em {url} (Status: {e.response.status_code}).\")\n",
+    "            error_messages.append(f\"'{suffix}': Não encontrado (Status {e.response.status_code})\")\n",
     "        except requests.exceptions.RequestException as e:\n",
-    "            print(f\"  -> Erro de conexão ao tentar {url}: {e}\")\n",
+    "            error_messages.append(f\"'{suffix}': Erro de conexão ({e})\")\n",
     "        except zipfile.BadZipFile:\n",
-    "            print(f\"  -> Erro: Arquivo baixado de {url} não é um ZIP válido.\")\n",
+    "            error_messages.append(f\"'{suffix}': Arquivo não é um ZIP válido.\")\n",
     "        except Exception as e:\n",
-    "            print(f\"  -> Erro inesperado ao processar {url}: {e}\")\n",
+    "            error_messages.append(f\"'{suffix}': Erro inesperado ({e})\")\n",
+    "            \n",
+    "    # Limpa a linha de \"Tentando...\"\n",
+    "    print(\"\\r\" + \" \" * 80 + \"\\r\", end=\"\")\n",
     "\n",
-    "    # Se após todas as tentativas o download falhou para a data\n",
-    "    if not download_success:\n",
-    "        print(f\"COSIF Prud. ({date}): FALHA no download após tentar todos os sufixos.\")\n",
+    "    if download_success:\n",
+    "        print(f\"COSIF Prud. ({date}): Sucesso! Arquivo baixado e extraído.\")\n",
+    "    else:\n",
+    "        # Imprime uma única mensagem de falha consolidada\n",
+    "        print(f\"COSIF Prud. ({date}): FALHA no download. Motivos: {'; '.join(error_messages)}\")\n",
     "\n",
     "# --- 2. Leitura e Consolidação dos CSVs ---\n",
     "df_list = []\n",
