Revert "New timeseries functionalities"
This reverts commit 0504226a1054c24d9be28564e24f6598cdb9aca9.

--- a/Analysis/DataAnalysis_example.ipynb
+++ b/Analysis/DataAnalysis_example.ipynb
@@ -205,7 +205,7 @@
     "    )\n",
     "display(serie_padrao)\n",
     "\n",
-    "print(\"\\nMesma série (preenchendo ausentes com 0)\")\n",
+    "print(f\"\\nMesma série (preenchendo ausentes com 0)\")\n",
     "serie_fill_zero = analisador.get_serie_temporal_indicador(\n",
     "    identificador=banco_serie, \n",
     "    conta=conta_serie, \n",
@@ -215,7 +215,7 @@
     "    fillna=0)\n",
     "display(serie_fill_zero)\n",
     "\n",
-    "print(\"\\nMesma série (tratando 0 como ausente)\")\n",
+    "print(f\"\\nMesma série (tratando 0 como ausente)\")\n",
     "serie_zeros_nan = analisador.get_serie_temporal_indicador(\n",
     "    identificador=banco_serie, \n",
     "    conta=conta_serie, \n",
@@ -253,75 +253,6 @@
     "display(dados_cruzados)\n",
     "\n",
     "print(\"\\n\\n--- FIM DAS DEMONSTRAÇÕES ---\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4c79ce8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ==============================================================================\n",
-    "# EXEMPLO EXTRA: Evolução do Lucro Líquido Trimestral (Batch)\n",
-    "# ==============================================================================\n",
-    "# Consulta em lote de um único indicador para múltiplos bancos, salvando em formato painel\n",
-    "# e exibindo um gráfico de comparação evolutiva.\n",
-    "# ------------------------------------------------------------------------------\n",
-    "\n",
-    "from pathlib import Path\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "print(\"\\n--- EXEMPLO EXTRA: Lucro Líquido Trimestral (Painel Comparativo) ---\")\n",
-    "\n",
-    "# Define bancos e indicador único\n",
-    "bancos_alvo = ['NU FINANCEIRA', 'BANCO INTER', 'BANCO BRADESCO', 'BCO DO BRASIL S.A.']\n",
-    "indicador_alvo = 'Lucro Líquido'\n",
-    "\n",
-    "# Armazena os resultados em um DataFrame no formato long\n",
-    "df_lucros = []\n",
-    "\n",
-    "for banco in bancos_alvo:\n",
-    "    try:\n",
-    "        df_serie = analisador.get_serie_temporal_indicador(\n",
-    "            identificador=banco,\n",
-    "            conta=indicador_alvo,\n",
-    "            data_inicio=202201,\n",
-    "            data_fim=202412,\n",
-    "            fonte='COSIF',\n",
-    "            formato_saida='long'\n",
-    "        )\n",
-    "        # Mantém apenas trimestres\n",
-    "        df_serie = df_serie[df_serie['DATA'].dt.month.isin([3, 6, 9, 12])]\n",
-    "        df_serie['Banco'] = banco\n",
-    "        df_lucros.append(df_serie)\n",
-    "    except Exception as e:\n",
-    "        print(f\"Erro ao buscar '{indicador_alvo}' para {banco}: {e}\")\n",
-    "\n",
-    "# Concatena tudo em painel\n",
-    "if df_lucros:\n",
-    "    df_painel = pd.concat(df_lucros, ignore_index=True)\n",
-    "    \n",
-    "    # Agrupa e plota\n",
-    "    df_pivot = df_painel.pivot(index='DATA', columns='Banco', values='VALOR')\n",
-    "    \n",
-    "    # Plot\n",
-    "    ax = df_pivot.plot(marker='o', figsize=(12, 6), title='Evolução do Lucro Líquido Trimestral')\n",
-    "    ax.set_ylabel(\"Lucro (R$)\")\n",
-    "    ax.set_xlabel(\"Data\")\n",
-    "    ax.yaxis.set_major_formatter(plt.FuncFormatter(lambda x, p: f'R$ {x/1e6:,.0f} mi'))\n",
-    "    plt.grid(True)\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "\n",
-    "    # Exporta também\n",
-    "    path_export = Path('.') / 'Results' / 'lucros_trimestrais_painel.xlsx'\n",
-    "    df_painel.to_excel(path_export, index=False)\n",
-    "    print(f\"\\nArquivo exportado com sucesso: {path_export.resolve()}\")\n",
-    "\n",
-    "else:\n",
-    "    print(\"Nenhum dado disponível para gerar painel comparativo.\")\n"
    ]
   }
  ],
